# lowball

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
data/personas/: friendly_mike.yaml  hardball_tony.yaml  savvy_diana.yaml  slick_eddie.yaml  walkaway_grace.yaml
data/tasks/easy/: civic_2019.yaml  corolla_2020.yaml
data/tasks/hard/: accord_walkaway_2021.yaml  wrx_limited_2020.yaml
data/tasks/medium/: accord_sport_2020.yaml  civic_deceptive_2020.yaml
data/vehicles/: listings.yaml
lowball/: __init__.py  cli.py
lowball/agents/: __init__.py  anthropic_agent.py  base.py  openai_agent.py
lowball/environment/: __init__.py  messaging.py  tools.py
lowball/evaluation/: __init__.py  harness.py  judge.py  metrics.py
lowball/simulation/: __init__.py  market.py  seller.py
lowball/tasks/: __init__.py  loader.py  schema.py
site/: index.html
tests/: test_marketplace.py  test_metrics.py  test_tasks.py
